@@ -7,7 +7,12 @@ import pprint
 
 import pytest
 
-from pint import Context, DimensionalityError, UnitRegistry, get_application_registry
+from pint import (
+    Context,
+    DimensionalityError,
+    UnitRegistry,
+    get_application_registry,
+)
 from pint.compat import np
 from pint.delegates.formatter._compound_unit_helpers import sort_by_dimensionality
 from pint.facets.plain.unit import UnitsContainer
@@ -1255,6 +1260,31 @@ def test_issue1949(registry_empty):
 def test_issue1772(given, expected):
     ureg = UnitRegistry(non_int_type=decimal.Decimal)
     assert f"{ureg(given):Lx}" == expected
+
+
+def test_issue2017():
+    ureg = UnitRegistry()
+
+    from pint import formatting as fmt
+
+    @fmt.register_unit_format("test")
+    def _test_format(unit, registry, **options):
+        print("format called")
+        proc = {u.replace("µ", "u"): e for u, e in unit.items()}
+        return fmt.formatter(
+            proc.items(),
+            as_ratio=True,
+            single_denominator=False,
+            product_fmt="*",
+            division_fmt="/",
+            power_fmt="{}{}",
+            parentheses_fmt="({})",
+            **options,
+        )
+
+    base_unit = ureg.microsecond
+    assert f"{base_unit:~test}" == "us"
+    assert f"{base_unit:test}" == "microsecond"
 
 
 def test_issue2007():
